[package]
name = "forestry"
version = "0.1.0"
authors = ["Jesse Stricker"]
edition = "2021"

[dependencies]
anyhow = "1.0.63"
clap = { version = "3.2.19", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.33"
toml = "0.5.9"
