[package]
name = "forestry"
version = "0.1.0"
authors = ["Jesse Stricker"]
edition = "2021"
description = "🌳 Keep your project directory trees in shape!"
homepage = "https://github.com/jessestricker/forestry"
repository = "https://github.com/jessestricker/forestry"
license = "MIT"
categories = ["command-line-utilities", "development-tools"]
publish = false

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.18", features = ["derive"] }
env_logger = "0.9.1"
globset = "0.4.9"
ignore = "0.4.18"
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.35"
toml = "0.5.9"
